RESOLVED FIXED200887
[Pointer Events] Removing the capture element prevents future pointer events from being dispatched on macOS
https://bugs.webkit.org/show_bug.cgi?id=200887
Summary [Pointer Events] Removing the capture element prevents future pointer events ...
Antoine Quint
Reported 2019-08-19 07:33:21 PDT
[Pointer Events] Removing the capture element prevents future pointer events from being dispatched on macOS
Attachments
Patch (6.27 KB, patch)
2019-08-19 07:36 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2019-08-19 07:36:16 PDT
Antoine Quint
Comment 2 2019-08-19 07:40:28 PDT
This used to work but regressed as a result of r246752 and r247148 since we would set the capture element on the frame's EventHandler but not reset it if the element was removed from the DOM since an isConnected() check was added prior to calling the code that would reset it to null.
Antoine Quint
Comment 3 2019-08-19 07:40:45 PDT
WebKit Commit Bot
Comment 4 2019-08-19 09:55:37 PDT
Comment on attachment 376684 [details] Patch Clearing flags on attachment: 376684 Committed r248855: <https://trac.webkit.org/changeset/248855>
WebKit Commit Bot
Comment 5 2019-08-19 09:55:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.