[Pointer Events] Removing the capture element prevents future pointer events from being dispatched on macOS https://bugs.webkit.org/show_bug.cgi?id=200887 <rdar://problem/54104147>

Patch by Antoine Quint <graouts@apple.com> on 2019-08-19
Reviewed by Dean Jackson.

Source/WebCore:

Test: pointerevents/mouse/pointer-capture-element-removal.html

While we should only dispatch a lostpointercapture event to a connected element, clearing the capture element set on the frame's EventHandler
should always happen, regardless of the connected status of the previous capture element, since otherwise all future mouse and pointer events
would be targeted at the now-disconnected, former capture element.

* page/PointerCaptureController.cpp:
(WebCore::PointerCaptureController::processPendingPointerCapture):

LayoutTests:

* pointerevents/mouse/pointer-capture-element-removal-expected.txt: Added.
* pointerevents/mouse/pointer-capture-element-removal.html: Added.

Canonical link: https://commits.webkit.org/214618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248855 268f45cc-cd09-0410-ab3c-d52691b4dbfc